Added explanatory comments for sqlite3 step

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "4f9e6c65",
    "metadata": {},
    "outputs": [],
@@ -28,10 +28,7 @@
     "import matplotlib as plt\n",
     "import pandas as pd\n",
     "import seaborn as sb\n",
-    "import sqlite3\n",
-    "# Database locations\n",
-    "# cruise_post = \"data/cruise_post.db\"\n",
-    "# cruise_pre = \"data/cruise_pre.db\""
+    "import sqlite3"
    ]
   },
   {
@@ -39,20 +36,21 @@
    "id": "143a0d76",
    "metadata": {},
    "source": [
-    "### (b) Use sqlite3 to read 'cruise_post.db' and 'cruise_pre.db' into Python"
+    "### (b) Use **sqlite3** to read **'cruise_post.db'** and **'cruise_pre.db'** into Python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "f3c4e8e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define function to get database connection object\n",
+    "# Define a function that returns database connection object\n",
+    "\n",
     "def get_db_connection(url):\n",
-    "    conn = sqlite3.connect(url)\n",
-    "    conn.row_factory = sqlite3.Row\n",
+    "    conn = sqlite3.connect(url)        # points database connection object to conn\n",
+    "    conn.row_factory = sqlite3.Row     # set return rows as dictionaries instead of tuples\n",
     "    return conn"
    ]
   },
@@ -63,19 +61,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read cruise pre and post data into list of dictionaries\n",
+    "# Read cruise_pre.db and cruise_post.db into list of dictionaries\n",
+    "\n",
+    "# Define required variables\n",
     "table_name = ['cruise_pre','cruise_post']\n",
     "cruise_pre_data = []\n",
     "cruise_post_data = []\n",
+    "\n",
+    "# Iterate through the 2 provided data sets: cruise_pre.db and cruise_post.db\n",
     "for table in table_name:\n",
+    "\n",
+    "    # Create connection to database\n",
     "    conn = get_db_connection('data/'+ table + '.db')\n",
+    "    # Execute query to fetch all rows and columns\n",
     "    data = conn.execute('SELECT * FROM {}'.format(table)).fetchall()\n",
+    "\n",
+    "    # Append row to respective variable container\n",
     "    if table == 'cruise_pre':\n",
     "        for i in data:\n",
     "            cruise_pre_data.append(dict(i))\n",
     "    else:\n",
     "        for i in data:\n",
     "            cruise_post_data.append(dict(i))\n",
+    "\n",
+    "# close database connection\n",
     "conn.close()"
    ]
   },
