More formatting and cleaning up

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Task 1 - Exploratory Data Analysis (EDA)\n",
-    "This notebook aims to present the findings of my analysis, and also a detailed walkthrough of the steps taken to derive the results."
+    "- This notebook aims to present the findings of my analysis, and also a detailed walkthrough of the steps taken to derive the results."
    ]
   },
   {
@@ -14,8 +14,8 @@
    "id": "3fda10e9",
    "metadata": {},
    "source": [
-    "## Data Pre-processing\n",
-    "### (a) Import libraries required"
+    "# Data Pre-processing\n",
+    "## (a) Import libraries required"
    ]
   },
   {
@@ -36,7 +36,15 @@
    "id": "143a0d76",
    "metadata": {},
    "source": [
-    "### (b) Use **sqlite3** to read **'cruise_post.db'** and **'cruise_pre.db'** into Python"
+    "## (b) Use **sqlite3** to read **'cruise_post.db'** and **'cruise_pre.db'** into Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e780ed6",
+   "metadata": {},
+   "source": [
+    "### (bi) Define a 'create database connection' function"
    ]
   },
   {
@@ -55,8 +63,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c27ba8ae",
+   "metadata": {},
+   "source": [
+    "### (bii) Read **cruise_pre.db** and **cruise_post.db** into Python"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "12bcbff7",
    "metadata": {},
    "outputs": [],
@@ -85,17 +101,31 @@
     "            cruise_post_data.append(dict(i))\n",
     "\n",
     "# close database connection\n",
-    "conn.close()"
+    "conn.close()\n",
+    "\n",
+    "# Output: cruise_pre_data and cruise_post_data now contains list of dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "507aa18c",
+   "metadata": {},
+   "source": [
+    "### (biii) Convert list of dict to Pandas DataFrame\n",
+    "- As Pandas DataFrame objects, many data manipulation and analytics tools are made available to us\n",
+    "- One main advantage is being able to present data in pleasantly formatted tables\n",
+    "- As shown in 'Pre-cruise Customer Survey' and 'Post-cruise Customer Data'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "a3f4aa0c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read list of dictionaries into Pandas Dataframe\n",
+    "# Set 'index' column as index\n",
     "cruise_post_df = pd.DataFrame(data=cruise_post_data).set_index('index')\n",
     "cruise_pre_df = pd.DataFrame(data=cruise_pre_data).set_index('index')"
    ]
@@ -106,12 +136,12 @@
    "metadata": {},
    "source": [
     "### Pre-cruise Customer Survey\n",
-    "This is a pre-purchase survey conducted to give ShipSail insights into what their customers prefer, or what is considered important to them for an enjoyable cruise journey."
+    "- This is a pre-purchase survey conducted to give ShipSail insights into what their customers prefer, or what is considered important to them for an enjoyable cruise journey."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "73fbe97f",
    "metadata": {},
    "outputs": [
@@ -283,7 +313,7 @@
        "133745  LB539JAJHXJ  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,12 +329,12 @@
    "metadata": {},
    "source": [
     "### Post-cruise Customer Data\n",
-    "This is a post-trip data collected by ShipSail to provide insights into the services or products that customers chosen in reality."
+    "- This is a post-trip data collected by ShipSail to provide insights into the services or products that customers chosen in reality."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "f7afb854",
    "metadata": {},
    "outputs": [
@@ -397,31 +427,15 @@
        "133745            NaN  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Display part of cruise post dataset\n",
-    "cruise_post_df.tail(3)\n",
-    "# Primary observations and understanding: \n",
-    "# "
+    "cruise_post_df.tail(3)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7d61403e",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebc5bab0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
