Added Data Cleaning section

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4f9e6c65",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f3c4e8e8",
    "metadata": {},
    "outputs": [],
@@ -72,10 +72,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "12bcbff7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "unable to open database file",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 12\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[39m# Iterate through the 2 provided data sets: cruise_pre.db and cruise_post.db\u001b[39;00m\n\u001b[1;32m      9\u001b[0m \u001b[39mfor\u001b[39;00m table \u001b[39min\u001b[39;00m table_name:\n\u001b[1;32m     10\u001b[0m \n\u001b[1;32m     11\u001b[0m     \u001b[39m# Create connection to database\u001b[39;00m\n\u001b[0;32m---> 12\u001b[0m     conn \u001b[39m=\u001b[39m get_db_connection(\u001b[39m'\u001b[39m\u001b[39mdata/\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m table \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m.db\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     13\u001b[0m     \u001b[39m# Execute query to fetch all rows and columns\u001b[39;00m\n\u001b[1;32m     14\u001b[0m     data \u001b[39m=\u001b[39m conn\u001b[39m.\u001b[39mexecute(\u001b[39m'\u001b[39m\u001b[39mSELECT * FROM \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(table))\u001b[39m.\u001b[39mfetchall()\n",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m, in \u001b[0;36mget_db_connection\u001b[0;34m(url)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_db_connection\u001b[39m(url):\n\u001b[0;32m----> 4\u001b[0m     conn \u001b[39m=\u001b[39m sqlite3\u001b[39m.\u001b[39mconnect(url)        \u001b[39m# points database connection object to conn\u001b[39;00m\n\u001b[1;32m      5\u001b[0m     conn\u001b[39m.\u001b[39mrow_factory \u001b[39m=\u001b[39m sqlite3\u001b[39m.\u001b[39mRow     \u001b[39m# set return rows as dictionaries instead of tuples\u001b[39;00m\n\u001b[1;32m      6\u001b[0m     \u001b[39mreturn\u001b[39;00m conn\n",
+      "\u001b[0;31mOperationalError\u001b[0m: unable to open database file"
+     ]
+    }
+   ],
    "source": [
     "# Read cruise_pre.db and cruise_post.db into list of dictionaries\n",
     "\n",
@@ -119,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "a3f4aa0c",
    "metadata": {},
    "outputs": [],
@@ -141,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "73fbe97f",
    "metadata": {},
    "outputs": [
@@ -334,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "f7afb854",
    "metadata": {},
    "outputs": [
@@ -454,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
