--- a/eda.ipynb
+++ b/eda.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "id": "a3f4aa0c",
    "metadata": {},
    "outputs": [],
@@ -178,13 +178,13 @@
     "- Implications:\n",
     "    1. Similar to Observation 1\n",
     "- Data handling suggestion:\n",
-    "    1. removing rows with 'NaN' field is **not** ideal as many rows contains at least one 'NaN' field\n",
-    "    2. convert 'NaN' into 0 instead to keep more data points\n"
+    "    1. Removal can be an option, but substantial rows will have to be removed for this set\n",
+    "    2. Impute 'NaN' into median value of that column to keep more data points and minimize large spreads or inaccuracies\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "id": "73fbe97f",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "4                        5.0              2.0          NaN  LB218CFLOBS  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,107 +421,386 @@
     "3 Columns are categorically labelled: \n",
     "1. `Onboard Wifi Service`\n",
     "2. `Onboard Entertainment`\n",
-    "3. `Onboard Dining Service`"
+    "3. `Onboard Dining Service`\n",
+    "\n",
+    "Look for unique values within each column first."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 73,
    "id": "4d4b710b",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Wifi Service Count</th>\n",
+       "      <th>Entertainment Count</th>\n",
+       "      <th>Dining Service Count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>A little important</th>\n",
+       "      <td>29383</td>\n",
+       "      <td>20009</td>\n",
+       "      <td>24763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Extremely important</th>\n",
+       "      <td>13031</td>\n",
+       "      <td>28625</td>\n",
+       "      <td>25149</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Not at all important</th>\n",
+       "      <td>20236</td>\n",
+       "      <td>14205</td>\n",
+       "      <td>14468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Somewhat important</th>\n",
+       "      <td>29101</td>\n",
+       "      <td>21627</td>\n",
+       "      <td>25037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Very important</th>\n",
+       "      <td>22503</td>\n",
+       "      <td>33367</td>\n",
+       "      <td>27520</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Onboard Wifi Service\n",
-       "A little important      29383\n",
-       "Extremely important     13031\n",
-       "Not at all important    20236\n",
-       "Somewhat important      29101\n",
-       "Very important          22503\n",
-       "dtype: int64"
+       "                      Wifi Service Count  Entertainment Count  \\\n",
+       "A little important                 29383                20009   \n",
+       "Extremely important                13031                28625   \n",
+       "Not at all important               20236                14205   \n",
+       "Somewhat important                 29101                21627   \n",
+       "Very important                     22503                33367   \n",
+       "\n",
+       "                      Dining Service Count  \n",
+       "A little important                   24763  \n",
+       "Extremely important                  25149  \n",
+       "Not at all important                 14468  \n",
+       "Somewhat important                   25037  \n",
+       "Very important                       27520  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Summarise the unique values in this column\n",
-    "cruise_pre_df.groupby('Onboard Wifi Service').size()"
+    "summary_pre = pd.concat([cruise_pre_df.groupby('Onboard Wifi Service').size(),\n",
+    "                        cruise_pre_df.groupby('Onboard Entertainment').size(),\n",
+    "                        cruise_pre_df.groupby('Onboard Dining Service').size()],\n",
+    "                        axis=1,\n",
+    "                        keys=['Wifi Service Count', 'Entertainment Count', 'Dining Service Count'])\n",
+    "summary_pre"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "42ec1e8c",
+   "execution_count": 55,
+   "id": "b6468b52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Onboard Entertainment\n",
-       "A little important      20009\n",
-       "Extremely important     28625\n",
-       "Not at all important    14205\n",
-       "Somewhat important      21627\n",
-       "Very important          33367\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Summarise the unique values in this column\n",
-    "cruise_pre_df.groupby('Onboard Entertainment').size()"
+    "# Based on the unique labels, there are no misspelling or outliers\n",
+    "# Note: NaN values are present but not displayed here\n",
+    "\n",
+    "# Define a string to value map to help encode these columns\n",
+    "rating_scale = {'Not at all important':1.0,\n",
+    "                'A little important':2.0,\n",
+    "                'Somewhat important':3.0,\n",
+    "                'Very important': 4.0,\n",
+    "                'Extremely important':5.0}\n",
+    "\n",
+    "# Store columns to encode\n",
+    "encode_columns = ['Onboard Wifi Service', 'Onboard Entertainment', 'Onboard Dining Service']\n",
+    "\n",
+    "# Iterate encoding for each column\n",
+    "for column in encode_columns:\n",
+    "    cruise_pre_df[column] = cruise_pre_df[column].map(rating_scale)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "41e22d73",
+   "execution_count": 56,
+   "id": "ad57790e",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Date of Birth</th>\n",
+       "      <th>Source of Traffic</th>\n",
+       "      <th>Onboard Wifi Service</th>\n",
+       "      <th>Embarkation/Disembarkation time convenient</th>\n",
+       "      <th>Ease of Online booking</th>\n",
+       "      <th>Gate location</th>\n",
+       "      <th>Logging</th>\n",
+       "      <th>Onboard Dining Service</th>\n",
+       "      <th>Online Check-in</th>\n",
+       "      <th>Cabin Comfort</th>\n",
+       "      <th>Onboard Entertainment</th>\n",
+       "      <th>Cabin service</th>\n",
+       "      <th>Baggage handling</th>\n",
+       "      <th>Port Check-in Service</th>\n",
+       "      <th>Onboard Service</th>\n",
+       "      <th>Cleanliness</th>\n",
+       "      <th>Ext_Intcode</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>None</td>\n",
+       "      <td>05/10/1973</td>\n",
+       "      <td>Direct - Company Website</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>01/01/2023 0:00</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>LB446RWOOZI</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Indirect - Social Media</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/01/2023 0:01</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>LB138HKBECM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>22/07/1998</td>\n",
+       "      <td>Indirect - Search Engine</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>01/01/2023 0:02</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BL713UHBAAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>01/05/1970</td>\n",
+       "      <td>Direct - Company Website</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>01/01/2023 0:05</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>LB243DMKCFL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>07/01/1960</td>\n",
+       "      <td>Direct - Company Website</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>01/01/2023 0:06</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LB218CFLOBS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Onboard Dining Service\n",
-       "A little important      24763\n",
-       "Extremely important     25149\n",
-       "Not at all important    14468\n",
-       "Somewhat important      25037\n",
-       "Very important          27520\n",
-       "dtype: int64"
+       "       Gender Date of Birth         Source of Traffic  Onboard Wifi Service  \\\n",
+       "index                                                                         \n",
+       "0        None    05/10/1973  Direct - Company Website                   2.0   \n",
+       "1      Female          None   Indirect - Social Media                   1.0   \n",
+       "2      Female    22/07/1998  Indirect - Search Engine                   NaN   \n",
+       "3      Female    01/05/1970  Direct - Company Website                   4.0   \n",
+       "4        Male    07/01/1960  Direct - Company Website                   3.0   \n",
+       "\n",
+       "       Embarkation/Disembarkation time convenient  Ease of Online booking  \\\n",
+       "index                                                                       \n",
+       "0                                             3.0                     5.0   \n",
+       "1                                             4.0                     1.0   \n",
+       "2                                             3.0                     0.0   \n",
+       "3                                             4.0                     4.0   \n",
+       "4                                             4.0                     2.0   \n",
+       "\n",
+       "       Gate location          Logging  Onboard Dining Service  \\\n",
+       "index                                                           \n",
+       "0                3.0  01/01/2023 0:00                     4.0   \n",
+       "1                NaN  01/01/2023 0:01                     4.0   \n",
+       "2                5.0  01/01/2023 0:02                     NaN   \n",
+       "3                4.0  01/01/2023 0:05                     3.0   \n",
+       "4                NaN  01/01/2023 0:06                     1.0   \n",
+       "\n",
+       "       Online Check-in  Cabin Comfort  Onboard Entertainment  Cabin service  \\\n",
+       "index                                                                         \n",
+       "0                  2.0            2.0                    2.0            2.0   \n",
+       "1                  NaN            4.0                    NaN            2.0   \n",
+       "2                  NaN            5.0                    5.0            2.0   \n",
+       "3                  4.0            4.0                    NaN            NaN   \n",
+       "4                  2.0            NaN                    1.0            3.0   \n",
+       "\n",
+       "       Baggage handling  Port Check-in Service  Onboard Service  Cleanliness  \\\n",
+       "index                                                                          \n",
+       "0                   2.0                    4.0              2.0          3.0   \n",
+       "1                   3.0                    4.0              4.0          4.0   \n",
+       "2                   1.0                    2.0              3.0          NaN   \n",
+       "3                   NaN                    3.0              2.0          4.0   \n",
+       "4                   NaN                    5.0              2.0          NaN   \n",
+       "\n",
+       "       Ext_Intcode  \n",
+       "index               \n",
+       "0      LB446RWOOZI  \n",
+       "1      LB138HKBECM  \n",
+       "2      BL713UHBAAN  \n",
+       "3      LB243DMKCFL  \n",
+       "4      LB218CFLOBS  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Summarise the unique values in this column\n",
-    "cruise_pre_df.groupby('Onboard Dining Service').size()"
+    "cruise_pre_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "568b0b6e",
+   "metadata": {},
+   "source": [
+    "#### Handle Missing Values for Pre-cruise Survey"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6468b52",
+   "id": "def1a414",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Define a string to value map to help encode these columns\n",
-    "rating_scale = {'Not at all important':1.0, \n",
-    "                'A little important':2.0, \n",
-    "                'Somewhat important':3.0, \n",
-    "                'Very important': 4.0, \n",
-    "                'Extremely important':5.0}"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
