--- a/eda.ipynb
+++ b/eda.ipynb
@@ -11,6 +11,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a56ee895",
+   "metadata": {},
+   "source": [
+    "**Outline:**\n",
+    "1. Data Loading\n",
+    "2. Basic Data Exploration\n",
+    "3. Data Preprocessing\n",
+    "\n",
+    "    3a. 'Age' feature engineering\n",
+    "    \n",
+    "4. In-Depth Data Exploration\n",
+    "5. Insights and Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3fda10e9",
    "metadata": {},
    "source": [
@@ -152,7 +168,7 @@
    "source": [
     "# Basic Data Exploration\n",
     "**Purpose:**\n",
-    "- Get basic understanding of the structure, content and quality of the datasets\n",
+    "- Understanding of the structure, content and quality of the datasets\n",
     "- Identify any missing data that may impact analysis"
    ]
   },
@@ -1107,9 +1123,9 @@
    "id": "573b2362",
    "metadata": {},
    "source": [
-    "# Data Cleaning\n",
+    "# Data Preprocessing\n",
     "**Purpose:**\n",
-    "- process the raw data to make it suitable for further analysis or modelling, by handling missing values, encoding categorical variables, and perform other necessary transformations"
+    "- Process the raw data to make it suitable for further analysis or modelling, by handling missing values, encoding categorical variables, and perform other necessary transformations"
    ]
   },
   {
@@ -1588,7 +1604,7 @@
    "id": "75975c09",
    "metadata": {},
    "source": [
-    "## Features Engineering"
+    "## Basic Feature Engineering"
    ]
   },
   {
@@ -2074,7 +2090,15 @@
    "id": "39e22256",
    "metadata": {},
    "source": [
-    "# Analysis"
+    "# In-Depth Data Exploration\n",
+    "**Purpose:** \n",
+    "- Gain deeper insights into the dataset\n",
+    "\n",
+    "Actions:\n",
+    "- Generate summary statistics and visualizations (histograms, box plots)\n",
+    "- Explore correlations between variables\n",
+    "- Visualize distributions and trends\n",
+    "- Conduct hypothesis testing if relevant"
    ]
   },
   {
@@ -2606,6 +2630,21 @@
    ],
    "source": [
     "sns.countplot(data=temp, hue='Ticket Type',x='Ease of Online booking')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcc4e7a4",
+   "metadata": {},
+   "source": [
+    "# Insights and Conclusions\n",
+    "**Purpose:** \n",
+    "- Summarize key findings and draw conclusions\n",
+    "\n",
+    "**Actions:**\n",
+    "- Provide summary of most important insights\n",
+    "- Explain any unexpected or interesting patterns\n",
+    "- Discuss implications and potential next steps"
    ]
   }
  ],
